--- a/about.html
+++ b/about.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About — Wheels on Fire</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <a class="skip-link" href="#about-main">Skip to main content</a>
 
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <h1 class="site-title"><a href="../index.html">Wheels on Fire</a></h1>
+      <h1 class="site-title"><a href="index.html">Wheels on Fire</a></h1>
       <nav class="main-nav" role="navigation" aria-label="Main navigation">
         <ul>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html" aria-current="page">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
