--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,27 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Contact — Wheels on Fire</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* ✅ Optional styling for success/error boxes */
+    .form-message {
+      margin-top: 1rem;
+      padding: 1rem;
+      border-radius: 8px;
+      font-weight: 500;
+      display: none;
+    }
+    .form-success {
+      background-color: #e6ffed;
+      color: #047857;
+      border: 1px solid #047857;
+    }
+    .form-error {
+      background-color: #fee2e2;
+      color: #b91c1c;
+      border: 1px solid #b91c1c;
+    }
+  </style>
 </head>
 <body>
   <a class="skip-link" href="#contact-main">Skip to main content</a>
@@ -15,7 +35,7 @@
       <h1 class="site-title"><a href="../index.html">Wheels on Fire</a></h1>
       <nav class="main-nav" role="navigation" aria-label="Main navigation">
         <ul>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html" aria-current="page">Contact</a></li>
         </ul>
@@ -25,37 +45,65 @@
 
   <main id="contact-main" class="container" role="main">
     <section class="contact-section" aria-labelledby="contact-heading">
-  <img src="https://images.unsplash.com/photo-1517142089942-ba376ce32a2e?auto=format&fit=crop&w=1000&q=80"
-       alt="Close-up of a steering wheel and dashboard, sunlight through windshield"
-       style="width:100%; border-radius:8px; margin-bottom:1rem;">
-  <h2 id="contact-heading">Contact John</h2>
+      <img 
+        src="c:\Users\FARES\Downloads\istockphoto-1478431022-1024x1024.jpg"
+        alt="Close-up of a steering wheel and dashboard, sunlight through windshield"
+        style="width:100%; border-radius:8px; margin-bottom:1rem;"
+      >
+      
+      <h2 id="contact-heading">Contact John</h2>
+      <p>
+        If you have a car question, a suggestion, or a spare part he can borrow (kidding),
+        drop John a message below. He promises to answer — probably with a pun.
+      </p>
 
-      <p>If you have a car question, a suggestion, or a spare part he can borrow (kidding), drop John a message below. He promises to answer — probably with a pun.</p>
-
-      <form id="contact-form" class="contact-form" action="#" method="post" novalidate aria-describedby="form-instructions">
-        <p id="form-instructions">All fields are labeled. Error messages appear as text (not color only).</p>
-
-        <label for="name">Your name</label>
-        <input id="name" name="name" type="text" required aria-required="true" />
-
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email" required aria-required="true" />
-
-        <label for="message">Message</label>
-        <textarea id="message" name="message" rows="6" required aria-required="true" placeholder="Tell John what you're looking for..."></textarea>
-
-        <!-- Non-color-only error example (hidden initially) -->
-        <div id="error-placeholder" aria-live="polite" class="form-error" hidden>
-          <span class="error-icon" aria-hidden="true">⚠️</span>
-          <span id="error-text">Please complete all required fields.</span>
-        </div>
-
-        <button type="submit" class="btn">Send message</button>
-
-        <div id="form-success" aria-live="polite" class="form-success" hidden>
-          Thanks — John will be in touch. Expect an answer, possibly with sarcasm.
-        </div>
+      <!-- ✅ Formspree form -->
+      <form
+        action="https://formspree.io/f/mblqllej"
+        method="POST"
+      >
+        <label>
+          Your email:
+          <input type="email" name="email">
+        </label>
+        <label>
+          Your message:
+          <textarea name="message"></textarea>
+        </label>
+        <!-- your other form fields go here -->
+        <button type="submit">Send</button>
       </form>
+
+      <!-- ✅ Success and error message containers -->
+      <div id="success-box" class="form-message form-success">✅ Message sent! Check your inbox.</div>
+      <div id="error-box" class="form-message form-error">❌ Something went wrong. Please try again later.</div>
+
+      <script>
+        const form = document.getElementById("contact-form");
+        const successBox = document.getElementById("success-box");
+        const errorBox = document.getElementById("error-box");
+
+        form.addEventListener("submit", async (e) => {
+          e.preventDefault();
+          successBox.style.display = "none";
+          errorBox.style.display = "none";
+
+          const data = new FormData(form);
+          const response = await fetch(form.action, {
+            method: form.method,
+            body: data,
+            headers: { 'Accept': 'application/json' }
+          });
+
+          if (response.ok) {
+            form.reset();
+            successBox.style.display = "block";
+          } else {
+            errorBox.style.display = "block";
+          }
+        });
+      </script>
+
     </section>
   </main>
 
@@ -66,33 +114,8 @@
   </footer>
 
   <script>
-    // small client-side validation to show non-color-only error messages
-    (function () {
-      const form = document.getElementById('contact-form');
-      const errorBox = document.getElementById('error-placeholder');
-      const successBox = document.getElementById('form-success');
-
-      form.addEventListener('submit', function (e) {
-        e.preventDefault();
-        errorBox.hidden = true;
-        successBox.hidden = true;
-
-        const name = form.name.value.trim();
-        const email = form.email.value.trim();
-        const message = form.message.value.trim();
-
-        if (!name || !email || !message) {
-          document.getElementById('error-text').textContent = 'Please complete all required fields.';
-          errorBox.hidden = false;
-          errorBox.focus();
-          return;
-        }
-
-        // Simulated successful submission
-        successBox.hidden = false;
-        form.reset();
-      });
-    })();
+    // update footer year automatically
+    document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
