--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         type: "city",
         fuel: "petrol",
         price: 12000,
-        image: "OneDrive - Technological University Dublin\TU850-assignment-1-web-development-\images\fordfiesta.jpg"
+        image: ""
       },
       {
         name: "Toyota Corolla",
