--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         type: "city",
         fuel: "petrol",
         price: 12000,
-        image: ""
+        image: "images/fordfiesta.jpg"
       },
       {
         name: "Toyota Corolla",
