--- a/index.html
+++ b/index.html
@@ -124,28 +124,28 @@
         type: "sedan",
         fuel: "petrol",
         price: 18000,
-        image: "https://upload.wikimedia.org/wikipedia/commons/4/4a/2020_Toyota_Corolla_Icon_Tech_VVT-i_HEV_CVT_1.8_Front.jpg"
+        image: "images/toyota.jpg"
       },
       {
         name: "Hyundai Tucson",
         type: "suv",
         fuel: "diesel",
         price: 25000,
-        image: "https://upload.wikimedia.org/wikipedia/commons/f/fd/2022_Hyundai_Tucson_Ultimate_PHEV_1.6_Front.jpg"
+        image: "images/tucson.jpg"
       },
       {
         name: "Tesla Model 3",
         type: "sedan",
         fuel: "ev",
         price: 38000,
-        image: "https://upload.wikimedia.org/wikipedia/commons/6/69/Tesla_Model_3_parked%2C_front_driver_side.jpg"
+        image: "images/tesla.jpg"
       },
       {
         name: "Nissan Leaf",
         type: "city",
         fuel: "ev",
         price: 21000,
-        image: "https://upload.wikimedia.org/wikipedia/commons/6/6b/2018_Nissan_Leaf_Tekna_Front.jpg"
+        image: "images/nissanleaf.jpg"
       }
     ];
 
