--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,10 @@
       <h1 class="site-title"><a href="../index.html">Wheels on Fire</a></h1>
       <nav class="main-nav" role="navigation" aria-label="Main navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" aria-current="page">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="contact.html" aria-current="page">Contact</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -46,7 +47,7 @@
   <main id="contact-main" class="container" role="main">
     <section class="contact-section" aria-labelledby="contact-heading">
       <img 
-        src="c:\Users\FARES\Downloads\istockphoto-1478431022-1024x1024.jpg"
+        src="images/bmw.jpg"
         alt="Close-up of a steering wheel and dashboard, sunlight through windshield"
         style="width:100%; border-radius:8px; margin-bottom:1rem;"
       >
