--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About — Wheels on Fire</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  image:"images/bmw.jpg"
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,8 +15,9 @@
       <h1 class="site-title"><a href="index.html">Wheels on Fire</a></h1>
       <nav class="main-nav" role="navigation" aria-label="Main navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" aria-current="page">About</a></li>
+          <li><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="events.html">Events</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -27,7 +28,7 @@
     <article class="about-article" aria-labelledby="about-heading">
       <h2 id="about-heading">Meet John O'Reilly</h2>
       <figure>
-        <img src="../media/john.jpg" alt="Portrait of John O'Reilly smiling next to a vintage car" />
+        <img src="images/john.jpg" alt="Portrait of John O'Reilly smiling next to his car" />
         <figcaption>John — part car-lover, part commentator.</figcaption>
       </figure>
 
