--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <label for="type">Body type</label>
         <select id="type" name="type" aria-label="Body type">
           <option value="">Any</option>
+          <option value="sports">Sports Car</option>
           <option value="city">City car — small</option>
           <option value="sedan">Sedan — comfortable</option>
           <option value="suv">SUV — spacious</option>
@@ -113,7 +114,7 @@
       { name: "Hyundai Tucson", type: "suv", fuel: "diesel", price: 25000, image: "images/tucson.jpg" },
       { name: "Tesla Model 3", type: "sedan", fuel: "ev", price: 38000, image: "images/telsa.jpg" },
       { name: "Nissan Leaf", type: "city", fuel: "ev", price: 21000, image: "images/nissanleaf.jpg" },
-      { name: "porsche 911", type: "sedan", fuel: "petrol", price:355406 , image: "images/porsche-911.jpg" }
+      { name: "porsche 911", type: "sports", fuel: "petrol", price:355406 , image: "images/porsche-911.jpg" }
     ];
 
     const form = document.querySelector(".finder");
