--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <h1 class="site-title"><a href="../index.html">Wheels on Fire</a></h1>
+      <h1 class="site-title"><a href="index.html">Wheels on Fire</a></h1>
       <nav class="main-nav" role="navigation" aria-label="Main navigation">
         <ul>
           <li><a href="index.html" aria-current="page">Home</a></li>
