--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
         </article>
 
         <article class="event-card" role="listitem" aria-labelledby="event-2-title">
-          <img src="images/toyota.jpg" alt="Toyota Corolla side view" loading="lazy">
+          <img src="images/corola.jpg" alt="Toyota Corolla side view" loading="lazy">
           <div class="event-body">
             <h4 id="event-2-title">Comfort & Efficiency Workshop — Corolla</h4>
             <p><strong>Date:</strong> Sunday, January 11, 2026</p>
