--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     const cars = [
       { name: "Ford Fiesta", type: "city", fuel: "petrol", price: 12000, image: "images/fordfiesta.jpg" },
-      { name: "Toyota Corolla", type: "sedan", fuel: "petrol", price: 18000, image: "images/toyota.jpg" },
+      { name: "Toyota Corolla", type: "sedan", fuel: "petrol", price: 18000, image: "images/corola.jpg" },
       { name: "Hyundai Tucson", type: "suv", fuel: "diesel", price: 25000, image: "images/tucson.jpg" },
       { name: "Tesla Model 3", type: "sedan", fuel: "ev", price: 38000, image: "images/telsa.jpg" },
       { name: "Nissan Leaf", type: "city", fuel: "ev", price: 21000, image: "images/nissanleaf.jpg" },
