--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
   <title>About — Wheels on Fire</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+<script src="script.js"></script>
+
 <body>
   <a class="skip-link" href="#about-main">Skip to main content</a>
 
