--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,8 @@
   </style>
 </head>
 
+<script src="script.js"></script>
+
 <body>
   <a class="skip-link" href="#contact-main">Skip to main content</a>
 
